Home Page complete and first services page created

--- a/index.html
+++ b/index.html
@@ -16,7 +16,10 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"
     />
-    <link rel="stylesheet" href="https://unpkg.com/lenis@1.1.19/dist/lenis.css" />
+    <link
+      rel="stylesheet"
+      href="https://unpkg.com/lenis@1.1.19/dist/lenis.css"
+    />
     <link
       rel="shortcut icon"
       href="assets/images/logo-icon.png"
@@ -29,9 +32,9 @@
       <nav class="navbar navbar-expand-lg custom-header">
         <div class="container">
           <!-- Logo -->
-            <a class="navbar-brand" href="/">
-              <img src="assets/images/logo-icon.png" alt="Logo" />
-            </a>
+          <a class="navbar-brand" href="/">
+            <img src="assets/images/logo-icon.png" alt="Logo" />
+          </a>
 
           <!-- Navbar Toggler for Mobile -->
           <button
@@ -48,31 +51,41 @@
             class="collapse navbar-collapse justify-content-center"
             id="navbarNav"
           >
-          <ul class="navbar-nav">
-            <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                Services
-              </a>
-              <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <li><a class="dropdown-item" href="web-design-&-development.html">Web Design & Development</a></li>
-                <li><a class="dropdown-item" href="#">Service 2</a></li>
-                <li><a class="dropdown-item" href="#">Service 3</a></li>
-                <li><a class="dropdown-item" href="#">Service 4</a></li>
-                <li><a class="dropdown-item" href="#">Service 5</a></li>
-                <li><a class="dropdown-item" href="#">Service 6</a></li>
-                <li><a class="dropdown-item" href="#">Service 7</a></li>
-              </ul>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Our Work</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">About</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Blog</a>
-            </li>
-          </ul>          
+            <ul class="navbar-nav">
+              <li class="nav-item dropdown">
+                <a
+                  class="nav-link dropdown-toggle"
+                  href="#"
+                  id="navbarDropdown"
+                  role="button"
+                  data-bs-toggle="dropdown"
+                  aria-expanded="false"
+                >
+                  Services
+                </a>
+                <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                  <li>
+                    <a class="dropdown-item" href="web-design-&-development.html">Web Design & Development</a>
+                  </li>
+                  <li><a class="dropdown-item" href="#">Search Engine Optimization</a></li>
+                  <li><a class="dropdown-item" href="#">Social Media Marketing</a></li>
+                  <li><a class="dropdown-item" href="#">Ui/Ux Designing</a></li>
+                  <li><a class="dropdown-item" href="#">Pay Per Click</a></li>
+                  <li><a class="dropdown-item" href="#">Video Animation</a></li>
+                  <li><a class="dropdown-item" href="#">App Development</a></li>
+                  <li><a class="dropdown-item" href="#">Logo Design</a></li>
+                </ul>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Our Work</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">About</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Blog</a>
+              </li>
+            </ul>
           </div>
 
           <!-- Right Side Buttons -->
@@ -93,7 +106,10 @@
               <div class="content">
                 <h5>Digitexsol</h5>
                 <h1><span class="different">Digital</span> Agency</h1>
-                <h4>Innovative Digital Agency <br>Crafting Impacful Designs, Branding, And</h4>
+                <h4>
+                  Innovative Digital Agency <br />Crafting Impacful Designs,
+                  Branding, And
+                </h4>
                 <div class="buttons">
                   <a href="#" class="btn btn-secondary rotating-border-button">
                     Explore More
@@ -171,7 +187,9 @@
             <div class="col-md-12">
               <div class="content">
                 <h5 class="dot">About Us</h5>
-                <h2><span class="different">Digitexsol </span><span class="animated-heading">creative digital agency specializes in designing and executing innovative digital solutions to help businesses grow. From branding and graphic design to web development...</span></h2>
+                <h2>
+                  <span class="different">Digitexsol </span><span class="animated-heading">creative digital agency specializes in designing and executing innovative digital solutions to help businesses grow. From branding and graphic design to web development...</span>
+                </h2>
                 <div class="buttons">
                   <a href="#" class="btn btn-secondary rotating-border-button">
                     Explore More About
@@ -340,10 +358,7 @@
                   </button>
                 </div>
                 <div class="service-image">
-                  <img
-                    src="assets/images/ai.webp"
-                    alt="Emerging Tech"
-                  />
+                  <img src="assets/images/ai.webp" alt="Emerging Tech" />
                 </div>
               </div>
 
@@ -376,10 +391,7 @@
                   </button>
                 </div>
                 <div class="service-image">
-                  <img
-                    src="assets/images/seo.webp"
-                    alt="Digital Marketing"
-                  />
+                  <img src="assets/images/seo.webp" alt="Digital Marketing" />
                 </div>
               </div>
             </div>
@@ -1097,12 +1109,11 @@
                   />
                   <h3><span class="different">Bailey</span> Peters</h3>
                   <p>
-                    Hats off to Zain!His creative genius shone
-                    through in our brand's digital makeover. The
-                    attention to detail and the understanding of
-                    our vision were impeccable. The new look has 
-                    elevated our brand presence, and we've received 
-                    numerous compliments. A big thumbs up!
+                    Hats off to Zain!His creative genius shone through in our
+                    brand's digital makeover. The attention to detail and the
+                    understanding of our vision were impeccable. The new look
+                    has elevated our brand presence, and we've received numerous
+                    compliments. A big thumbs up!
                   </p>
                 </div>
               </div>
@@ -1119,9 +1130,9 @@
                   />
                   <h3><span class="different">Billy</span> French</h3>
                   <p>
-                    The visuals created resonated with our audience,
-                    and we've seen a positive impact on brand perception. 
-                    Thanks to the team.
+                    The visuals created resonated with our audience, and we've
+                    seen a positive impact on brand perception. Thanks to the
+                    team.
                   </p>
                 </div>
               </div>
@@ -1138,11 +1149,11 @@
                   />
                   <h3><span class="different">Josh</span> O'Neill</h3>
                   <p>
-                    I hired Digitexsol to run ads on Facebook, and
-                    wow, the outcome was amazing! Max was in charge,
-                    and our investment really paid off. The ads were 
-                    super attractive, and they reached exactly the right
-                    people. It totally transformed our online cosmetic store!
+                    I hired Digitexsol to run ads on Facebook, and wow, the
+                    outcome was amazing! Max was in charge, and our investment
+                    really paid off. The ads were super attractive, and they
+                    reached exactly the right people. It totally transformed our
+                    online cosmetic store!
                   </p>
                 </div>
               </div>
@@ -1159,11 +1170,9 @@
                   />
                   <h3><span class="different">Sarah</span> Johnson</h3>
                   <p>
-                    Digitex Sol's strategic digital marketing
-                    approach delivered exceptional results.
-                    Our lead generation doubled in just a few
-                    months, and their attention to detail truly
-                    stood out.
+                    Digitex Sol's strategic digital marketing approach delivered
+                    exceptional results. Our lead generation doubled in just a
+                    few months, and their attention to detail truly stood out.
                   </p>
                 </div>
               </div>
@@ -1180,12 +1189,11 @@
                   />
                   <h3><span class="different">Bailey</span> Peters</h3>
                   <p>
-                    Hats off to Zain!His creative genius shone
-                    through in our brand's digital makeover. The
-                    attention to detail and the understanding of
-                    our vision were impeccable. The new look has 
-                    elevated our brand presence, and we've received 
-                    numerous compliments. A big thumbs up!
+                    Hats off to Zain!His creative genius shone through in our
+                    brand's digital makeover. The attention to detail and the
+                    understanding of our vision were impeccable. The new look
+                    has elevated our brand presence, and we've received numerous
+                    compliments. A big thumbs up!
                   </p>
                 </div>
               </div>
@@ -1202,9 +1210,9 @@
                   />
                   <h3><span class="different">Billy</span> French</h3>
                   <p>
-                    The visuals created resonated with our audience,
-                    and we've seen a positive impact on brand perception. 
-                    Thanks to the team.
+                    The visuals created resonated with our audience, and we've
+                    seen a positive impact on brand perception. Thanks to the
+                    team.
                   </p>
                 </div>
               </div>
@@ -1221,11 +1229,11 @@
                   />
                   <h3><span class="different">Josh</span> O'Neill</h3>
                   <p>
-                    I hired Digitexsol to run ads on Facebook, and
-                    wow, the outcome was amazing! Max was in charge,
-                    and our investment really paid off. The ads were 
-                    super attractive, and they reached exactly the right
-                    people. It totally transformed our online cosmetic store!
+                    I hired Digitexsol to run ads on Facebook, and wow, the
+                    outcome was amazing! Max was in charge, and our investment
+                    really paid off. The ads were super attractive, and they
+                    reached exactly the right people. It totally transformed our
+                    online cosmetic store!
                   </p>
                 </div>
               </div>
@@ -1242,11 +1250,9 @@
                   />
                   <h3><span class="different">Sarah</span> Johnson</h3>
                   <p>
-                    Digitex Sol's strategic digital marketing
-                    approach delivered exceptional results.
-                    Our lead generation doubled in just a few
-                    months, and their attention to detail truly
-                    stood out.
+                    Digitex Sol's strategic digital marketing approach delivered
+                    exceptional results. Our lead generation doubled in just a
+                    few months, and their attention to detail truly stood out.
                   </p>
                 </div>
               </div>
@@ -1425,7 +1431,9 @@
                 <div class="form-group">
                   <textarea placeholder="Message" rows="4" required></textarea>
                 </div>
-                <a type="submit" class="btn btn-secondary rotating-border-button"
+                <a
+                  type="submit"
+                  class="btn btn-secondary rotating-border-button"
                   >Book Your 10 Minutes Free Consultation
                   <svg
                     xmlns="http://www.w3.org/2000/svg"
@@ -1500,61 +1508,51 @@
                 <div class="faq">
                   <div class="faq-item">
                     <button class="faq-question">
-                      <span class="icon">+</span> Lorem ipsum dolor sit amet,
-                      consectetur adipiscing elit sed?
+                      <span class="icon">+</span> How long does it take to complete a web design and development project? 
                     </button>
                     <div class="faq-answer">
                       <p>
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit
-                        sed.
+                        DigitexSol tailors project timelines based on your specific requirements. Typically, a website project can take anywhere from 6 to 12 weeks, depending on complexity.
                       </p>
                     </div>
                   </div>
                   <div class="faq-item">
                     <button class="faq-question">
-                      <span class="icon">+</span> Lorem ipsum dolor sit amet,
-                      consectetur adipiscing elit sed?
+                      <span class="icon">+</span> What sets DigitexSol apart from other web development agencies in Dubai?
                     </button>
                     <div class="faq-answer">
                       <p>
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit
-                        sed.
+                        What sets DigitexSol apart from other web development agencies in Dubai?
                       </p>
                     </div>
                   </div>
                   <div class="faq-item">
                     <button class="faq-question">
-                      <span class="icon">+</span> Lorem ipsum dolor sit amet,
-                      consectetur adipiscing elit sed?
+                      <span class="icon">+</span> Do you offer ongoing support and maintenance after the website is live?
                     </button>
                     <div class="faq-answer">
                       <p>
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit
-                        sed.
+                        Yes, we provide ongoing support and maintenance services to keep your website secure, up-to-date, and performing at its best. We're here to ensure a seamless user experience and long-term success.
                       </p>
                     </div>
                   </div>
                   <div class="faq-item">
                     <button class="faq-question">
-                      <span class="icon">+</span> Lorem ipsum dolor sit amet,
-                      consectetur adipiscing elit sed?
+                      <span class="icon">+</span> Can you assist with domain setup and hosting?
                     </button>
                     <div class="faq-answer">
                       <p>
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit
-                        sed.
+                        Yes. We assist with domain setup, and hosting recommendations, and facilitate a smooth transition to your new digital home. Your website will be up and running without any hassle.
                       </p>
                     </div>
                   </div>
                   <div class="faq-item">
                     <button class="faq-question">
-                      <span class="icon">+</span> Lorem ipsum dolor sit amet,
-                      consectetur adipiscing elit sed?
+                      <span class="icon">+</span> What is the level of client involvement during the project?
                     </button>
                     <div class="faq-answer">
                       <p>
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit
-                        sed.
+                        We highly value client collaboration. Your insights are integral to our process. We keep you informed and involved at every stage, ensuring that the final product aligns with your expectations and objectives.
                       </p>
                     </div>
                   </div>
@@ -1611,9 +1609,7 @@
 
             <div class="address">
               <h4>Address</h4>
-              <p>
-                Dubai : Grosvenor Business Tower, Tecom, Dubai.
-              </p>
+              <p>Dubai : Grosvenor Business Tower, Tecom, Dubai.</p>
             </div>
           </div>
 
@@ -1646,7 +1642,11 @@
           alt="Astronaut"
           class="astronaut-img lft-col"
         />
-        <img src="assets/images/earth.webp" alt="Earth" class="earth-img rgt-col" />
+        <img
+          src="assets/images/earth.webp"
+          alt="Earth"
+          class="earth-img rgt-col"
+        />
       </figure>
     </footer>
 
