all services page created

--- a/social-media-marketing.html
+++ b/social-media-marketing.html
@@ -69,11 +69,11 @@
                   </li>
                   <li><a class="dropdown-item" href="search-engine-optimization.html">Search Engine Optimization</a></li>
                   <li><a class="dropdown-item" href="social-media-marketing.html">Social Media Marketing</a></li>
-                  <li><a class="dropdown-item" href="#">Ui/Ux Designing</a></li>
-                  <li><a class="dropdown-item" href="#">Pay Per Click</a></li>
-                  <li><a class="dropdown-item" href="#">Video Animation</a></li>
-                  <li><a class="dropdown-item" href="#">App Development</a></li>
-                  <li><a class="dropdown-item" href="#">Logo Design</a></li>
+                  <li><a class="dropdown-item" href="ui-ux-design.html">Ui/Ux Designing</a></li>
+                  <li><a class="dropdown-item" href="pay-per-click.html">Pay Per Click</a></li>
+                  <li><a class="dropdown-item" href="video-animation.html">Video Animation</a></li>
+                  <li><a class="dropdown-item" href="mobile-app-development.html">App Development</a></li>
+                  <li><a class="dropdown-item" href="logo-design.html">Logo Design</a></li>
                 </ul>
               </li>
               <li class="nav-item">
@@ -202,7 +202,7 @@
       <div class="main-bg2">
         <section class="development-services py-5">
           <div class="container-fluid px-lg-5">
-            <h2 class="text-center fw-bold">
+            <h2 class="text-center fw-bold mb-5">
                 <span class="different">Social Media</span> Marketing Management
                 Services</h2>
             <div class="row card-slider">
