--- a/web-design-&-development.html
+++ b/web-design-&-development.html
@@ -69,11 +69,11 @@
                   </li>
                   <li><a class="dropdown-item" href="search-engine-optimization.html">Search Engine Optimization</a></li>
                   <li><a class="dropdown-item" href="social-media-marketing.html">Social Media Marketing</a></li>
-                  <li><a class="dropdown-item" href="#">Ui/Ux Designing</a></li>
-                  <li><a class="dropdown-item" href="#">Pay Per Click</a></li>
-                  <li><a class="dropdown-item" href="#">Video Animation</a></li>
-                  <li><a class="dropdown-item" href="#">App Development</a></li>
-                  <li><a class="dropdown-item" href="#">Logo Design</a></li>
+                  <li><a class="dropdown-item" href="ui-ux-design.html">Ui/Ux Designing</a></li>
+                  <li><a class="dropdown-item" href="pay-per-click.html">Pay Per Click</a></li>
+                  <li><a class="dropdown-item" href="video-animation.html">Video Animation</a></li>
+                  <li><a class="dropdown-item" href="mobile-app-development.html">App Development</a></li>
+                  <li><a class="dropdown-item" href="logo-design.html">Logo Design</a></li>
                 </ul>
               </li>
               <li class="nav-item">
@@ -339,7 +339,7 @@
           </div>
         </section>
       </div>
-      <section class="portfolio bg-light-blue text-white web-dots">
+      <!-- <section class="portfolio bg-light-blue text-white web-dots">
         <div class="container-fluid px-lg-5" bis_skin_checked="1">
           <div class="row align-items-center" bis_skin_checked="1">
             <div class="col-12 col-lg-5" bis_skin_checked="1">
@@ -1002,7 +1002,7 @@
             </div>
           </div>
         </div>
-      </section>
+      </section> -->
       <section class="section section--panel panel spacer-y">
         <div class="container">
             <div class="custom-row justify-content-center">
@@ -1031,7 +1031,7 @@
                           <div class="panel__left-content__wrapper">
                               <div class="generic-panel">
                                   <div class="generic-panel__head generic-heading">
-                                      <h3 class="generic-heading__xxl-medium-heading animate fadein">Government</h3></div>
+                                      <h3 class="generic-heading__xxl-medium-heading animate fadein">Ecommerce</h3></div>
                                   <div class="generic-panel__content large-txt">
                                       <p class="animate fadein">
                                           <strong>We have helped leading government sectors in the UAE!</strong>
@@ -1116,7 +1116,7 @@
                         <div class="panel__left-content__wrapper">
                             <div class="generic-panel">
                                 <div class="generic-panel__head generic-heading">
-                                    <h3 class="generic-heading__xxl-medium-heading animate fadein">Government</h3></div>
+                                    <h3 class="generic-heading__xxl-medium-heading animate fadein">Fitness</h3></div>
                                 <div class="generic-panel__content large-txt">
                                     <p class="animate fadein">
                                         <strong>We have helped leading government sectors in the UAE!</strong>
@@ -1201,7 +1201,7 @@
                         <div class="panel__left-content__wrapper">
                             <div class="generic-panel">
                                 <div class="generic-panel__head generic-heading">
-                                    <h3 class="generic-heading__xxl-medium-heading animate fadein">Government</h3></div>
+                                    <h3 class="generic-heading__xxl-medium-heading animate fadein">Real Estate</h3></div>
                                 <div class="generic-panel__content large-txt">
                                     <p class="animate fadein">
                                         <strong>We have helped leading government sectors in the UAE!</strong>
@@ -1286,7 +1286,7 @@
                         <div class="panel__left-content__wrapper">
                             <div class="generic-panel">
                                 <div class="generic-panel__head generic-heading">
-                                    <h3 class="generic-heading__xxl-medium-heading animate fadein">Government</h3></div>
+                                    <h3 class="generic-heading__xxl-medium-heading animate fadein">Fintech</h3></div>
                                 <div class="generic-panel__content large-txt">
                                     <p class="animate fadein">
                                         <strong>We have helped leading government sectors in the UAE!</strong>
@@ -1371,7 +1371,7 @@
                         <div class="panel__left-content__wrapper">
                             <div class="generic-panel">
                                 <div class="generic-panel__head generic-heading">
-                                    <h3 class="generic-heading__xxl-medium-heading animate fadein">Government</h3></div>
+                                    <h3 class="generic-heading__xxl-medium-heading animate fadein">Restaurants</h3></div>
                                 <div class="generic-panel__content large-txt">
                                     <p class="animate fadein">
                                         <strong>We have helped leading government sectors in the UAE!</strong>
@@ -1456,7 +1456,7 @@
                         <div class="panel__left-content__wrapper">
                             <div class="generic-panel">
                                 <div class="generic-panel__head generic-heading">
-                                    <h3 class="generic-heading__xxl-medium-heading animate fadein">Government</h3></div>
+                                    <h3 class="generic-heading__xxl-medium-heading animate fadein">Construction</h3></div>
                                 <div class="generic-panel__content large-txt">
                                     <p class="animate fadein">
                                         <strong>We have helped leading government sectors in the UAE!</strong>
@@ -1535,7 +1535,7 @@
                     </div>
                 </div>
               </div>
-              <div class="panel__card panel__card--seven">
+              <!-- <div class="panel__card panel__card--seven">
                 <div class="custom-row">
                     <div class="col_12 col_lg_3 col_xl_3 panel__left-content">
                         <div class="panel__left-content__wrapper">
@@ -1619,7 +1619,7 @@
                         </div>
                     </div>
                 </div>
-              </div>
+              </div> -->
               <div class="panel__spacer"></div>
             </div>
           </div>
