--- a/index.html
+++ b/index.html
@@ -69,11 +69,11 @@
                   </li>
                   <li><a class="dropdown-item" href="search-engine-optimization.html">Search Engine Optimization</a></li>
                   <li><a class="dropdown-item" href="social-media-marketing.html">Social Media Marketing</a></li>
-                  <li><a class="dropdown-item" href="#">Ui/Ux Designing</a></li>
-                  <li><a class="dropdown-item" href="#">Pay Per Click</a></li>
-                  <li><a class="dropdown-item" href="#">Video Animation</a></li>
-                  <li><a class="dropdown-item" href="#">App Development</a></li>
-                  <li><a class="dropdown-item" href="#">Logo Design</a></li>
+                  <li><a class="dropdown-item" href="ui-ux-design.html">Ui/Ux Designing</a></li>
+                  <li><a class="dropdown-item" href="pay-per-click.html">Pay Per Click</a></li>
+                  <li><a class="dropdown-item" href="video-animation.html">Video Animation</a></li>
+                  <li><a class="dropdown-item" href="mobile-app-development.html">App Development</a></li>
+                  <li><a class="dropdown-item" href="logo-design.html">Logo Design</a></li>
                 </ul>
               </li>
               <li class="nav-item">
