--- a/mobile-app-development.html
+++ b/mobile-app-development.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Search Engine Optimization-Digitexsol</title>
+    <title>Mobile App Development-Digitexsol</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -104,18 +104,25 @@
           <div class="row align-items-center">
             <div class="col-md-6 lft-col">
               <div class="content">
-                <h5>AGENCY WHICH STRIVES FOR EXCELLENCE</h5>
-                <h2>Maximize Your Reach With Digitexsol: 
-                  <span class="different">The Best SEO Service</span> Provider In Dubai.
+                <h2>
+                Your Top Choice for
+                  <span class="different">Mobile App Development</span> in Dubai
+                  Dubai
                 </h2>
                 <p>
-                  We craft tailored SEO strategies that align with your brand's unique identity, ensuring you stand out in the digital landscape.
+                    At DigitexSol, we redefine mobile app development in Dubai. Our expert team crafts cutting-edge apps for Android, iOS, and cross-platform experiences. We stand out for delivering a full suite of services, creating impactful mobile solutions. Count on DigitexSol's passionate iOS and Android app developers to bring your vision to life.
                 </p>
-                <ul>
-                  <li> Tailored strategies to drive organic traffic.</li>
-                  <li>Keyword optimization for higher search engine optimization in Dubai.</li>
-                  <li>Comprehensive analytics for sustained growth.</li>
-                </ul>
+                <!-- <ul>
+                  <li>WordPress development</li>
+                  <li>Sitecore Development</li>
+                  <li>PHP Development</li>
+                  <li>ASP .NET development</li>
+                  <li>Drupal Development</li>
+                  <li>Laravel Development</li>
+                  <li>Python web Development</li>
+                  <li>Angular JS Development</li>
+                  <li>Enterprise development</li>
+                </ul> -->
                 <div class="buttons">
                   <a
                     href="tel: +971505087349"
@@ -195,51 +202,19 @@
         </div>
       </section>
       <div class="main-bg2">
-        <section class="dev-logo-section py-5">
-          <div class="container-fluid">
-            <div class="swiper dev-logo-swiper">
-              <div class="swiper-wrapper">
-                <div class="swiper-slide">
-                  <img src="assets/images/platform-1.webp" alt="Logo 1" />
-                </div>
-                <div class="swiper-slide">
-                  <img src="assets/images/platform-2.webp" alt="Logo 2" />
-                </div>
-                <div class="swiper-slide">
-                  <img src="assets/images/platform-3.webp" alt="Logo 3" />
-                </div>
-                <div class="swiper-slide">
-                  <img src="assets/images/platform-4.webp" alt="Logo 4" />
-                </div>
-                <div class="swiper-slide">
-                  <img src="assets/images/platform-1.webp" alt="Logo 5" />
-                </div>
-                <div class="swiper-slide">
-                  <img src="assets/images/platform-2.webp" alt="Logo 6" />
-                </div>
-                <div class="swiper-slide">
-                  <img src="assets/images/platform-3.webp" alt="Logo 7" />
-                </div>
-                <div class="swiper-slide">
-                  <img src="assets/images/platform-4.webp" alt="Logo 8" />
-                </div>
-              </div>
-            </div>
-          </div>
-        </section>
         <section class="development-services py-5">
           <div class="container-fluid px-lg-5">
             <h2 class="text-center fw-bold">
-              Boost Your Brand's Presence with <br><span class="different">DigitexSol’s</span> Trusted SEO Strategies
+              Our <span class="different">Mobile App Development</span> Services For Every Business
             </h2>
-            <p class="mb-5 w-75 m-auto text-center">With DigitexSol’s best SEO services in UAE, your brand’s visibility takes center stage. We focus on not just improving your search engine rankings but creating a strong digital place that aligns with your target audience. Our commitment to staying updated with the latest SEO trends and algorithms empowers us to change your digital journey toward unparalleled success.            </p>
+            <p class="text-center mb-5">At DigitexSol, we offer a range of Google ads services to promote your online presence and drive high-value clicks.</p>
             <div class="row card-slider">
               <div class="col-12 col-lg-4 mb-3">
                 <div class="card-ser text-center">
                   <i class="fas fa-wordpress icon fa-2x"></i>
-                  <h5 class="fw-700 py-3">On-Page SEO</h5>
+                  <h5 class="fw-700 py-3">Mobile App Development</h5>
                   <p>
-                    As the best content SEO agency, we optimize titles, Meta descriptions, headers, and content structure to align with targeted keywords and improve search engine rankings.
+                    We bring your ideas to life with our mobile app development service. Whether it's for Android or iOS, our talented team ensures your app is user-friendly & tailored to your unique needs. We focus on making your app stand out in the crowded digital space.
                   </p>
                 </div>
               </div>
@@ -247,9 +222,9 @@
               <div class="col-12 col-lg-4 mb-3">
                 <div class="card-ser text-center">
                   <i class="fas fa-cogs icon fa-2x"></i>
-                  <h5 class="fw-700 py-3">Off-Page SEO</h5>
+                  <h5 class="fw-700 py-3">Native App Development</h5>
                   <p>
-                    Our link-building tactics focus on establishing your website’s credibility and relevance, driving traffic, and improving search engine rankings
+                    DigitexSol's native app development service is all about creating apps that smoothly fit into specific platforms like Android or iOS. Our expert team ensures your app utilizes the full capabilities of these platforms, providing a seamless & optimized user experience that feels completely at home.
                   </p>
                 </div>
               </div>
@@ -257,42 +232,44 @@
               <div class="col-12 col-lg-4 mb-3">
                 <div class="card-ser text-center">
                   <i class="fab fa-php icon fa-2x"></i>
-                  <h5 class="fw-700 py-3">Keyword Research and Optimization</h5>
+                  <h5 class="fw-700 py-3">Hybrid App Development</h5>
                   <p>
-                    Take the power of relevant keywords with our research and optimization services. We take time to identify high-impact keywords tailored to your niche, ensuring your content aligns with search intent.
+                    With our hybrid app development service, you get the best of both worlds. We design apps that effortlessly work across various platforms, merging the efficiency of web technologies with the strength of native apps.
                   </p>
                 </div>
               </div>
 
-              <div class="col-12 col-lg-4 mb-3">
+              <div class="col-12 col-lg-4">
                 <div class="card-ser text-center">
                   <i class="fas fa-code icon fa-2x"></i>
-                  <h5 class="fw-700 py-3">Technical SEO Services</h5>
+                  <h5 class="fw-700 py-3">E-Commerce App Development</h5>
                   <p>
-                    Optimize your website’s technical aspects with our technical SEO agency. We address issues such as site speed, mobile responsiveness, schema markup, and indexing, to help your site meet search engine standards.
+                    Our specialized e-commerce app development service focuses not only on security & user-friendliness but also on creating a visually immersive platform. We aim to provide your customers with not just a seamless shopping experience but an unforgettable one that keeps them coming back for more.
                   </p>
                 </div>
               </div>
 
-              <div class="col-12 col-lg-4 mb-3">
+              <div class="col-12 col-lg-4">
                 <div class="card-ser text-center">
                   <i class="fab fa-drupal icon fa-2x"></i>
-                  <h5 class="fw-700 py-3">E-Commerce SEO Strategies</h5>
+                  <h5 class="fw-700 py-3">B2B App Development</h5>
                   <p>
-                    We optimize product pages, and navigation, and implement strategies to improve visibility in competitive online marketplaces, driving more traffic and increasing conversions.
+                    Our B2B app development service goes beyond creating apps; we design solutions that streamline B2B interactions, fostering enhanced communication & operational efficiency. Trust us to create a custom B2B app that aligns seamlessly with your unique business goals, providing a technology-driven edge to your operations.
                   </p>
                 </div>
               </div>
 
-              <div class="col-12 col-lg-4 mb-3">
+              <!-- <div class="col-12 col-lg-4">
                 <div class="card-ser text-center">
-                  <i class="fab fa-python icon fa-2x"></i>
-                  <h5 class="fw-700 py-3">Local SEO Solutions</h5>
+                  <i class="fab fa-laravel icon fa-2x"></i>
+                  <h5 class="fw-700 py-3">Laravel Development</h5>
                   <p>
-                    We optimize your online presence to cater to local searches, From Google My Business optimization to local citations, we ensure your business stands out in local searches.
+                    From custom web applications to powerful e-commerce
+                    platforms, with our Laravel development services, we make
+                    your digital dream a reality.
                   </p>
                 </div>
-              </div>
+              </div> -->
             </div>
           </div>
         </section>
@@ -347,7 +324,7 @@
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link" data-bs-toggle="tab" href="#tab4"
+              <a class="nav-link active" data-bs-toggle="tab" href="#tab4"
                 >Mobile App</a
               >
             </li>
@@ -361,7 +338,7 @@
               <a class="nav-link" data-bs-toggle="tab" href="#tab7">Print</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link active" data-bs-toggle="tab" href="#tab8">SEO</a>
+              <a class="nav-link" data-bs-toggle="tab" href="#tab8">SEO</a>
             </li>
           </ul>
 
