--- a/pay-per-click.html
+++ b/pay-per-click.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Search Engine Optimization-Digitexsol</title>
+    <title>Pay Per Click-Digitexsol</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -104,24 +104,28 @@
           <div class="row align-items-center">
             <div class="col-md-6 lft-col">
               <div class="content">
-                <h5>AGENCY WHICH STRIVES FOR EXCELLENCE</h5>
-                <h2>Maximize Your Reach With Digitexsol: 
-                  <span class="different">The Best SEO Service</span> Provider In Dubai.
+                <h2>Boost your Business with our
+                  <span class="different">Pay-Per-Click</span> Services in Dubai
                 </h2>
                 <p>
-                  We craft tailored SEO strategies that align with your brand's unique identity, ensuring you stand out in the digital landscape.
+                    Boost your Business with our Pay-Per-Click Services in Dubai Our services represent our mission to empower businesses with our exceptional custom web design and development agency that enables them to new heights in the digital landscape.Boost your Business with our Pay-Per-Click Services in Dubai
                 </p>
-                <ul>
-                  <li> Tailored strategies to drive organic traffic.</li>
-                  <li>Keyword optimization for higher search engine optimization in Dubai.</li>
-                  <li>Comprehensive analytics for sustained growth.</li>
-                </ul>
+                <!-- <ul>
+                  <li>WordPress development</li>
+                  <li>Sitecore Development</li>
+                  <li>PHP Development</li>
+                  <li>ASP .NET development</li>
+                  <li>Drupal Development</li>
+                  <li>Laravel Development</li>
+                  <li>Python web Development</li>
+                  <li>Angular JS Development</li>
+                  <li>Enterprise development</li>
+                </ul> -->
                 <div class="buttons">
                   <a
                     href="tel: +971505087349"
                     class="btn rotating-border-button"
-                    ><i class="fa-solid fa-phone"></i> +971 50 508 7349</a
-                  >
+                    ><i class="fa-solid fa-phone"></i> +971 50 508 7349</a>
                 </div>
               </div>
             </div>
@@ -200,28 +204,28 @@
             <div class="swiper dev-logo-swiper">
               <div class="swiper-wrapper">
                 <div class="swiper-slide">
-                  <img src="assets/images/platform-1.webp" alt="Logo 1" />
+                  <img src="assets/images/logos/cocacola-logo.png" alt="Logo 1" />
                 </div>
                 <div class="swiper-slide">
-                  <img src="assets/images/platform-2.webp" alt="Logo 2" />
+                  <img src="assets/images/logos/coinbase-logo.png" alt="Logo 2" />
                 </div>
                 <div class="swiper-slide">
-                  <img src="assets/images/platform-3.webp" alt="Logo 3" />
+                  <img src="assets/images/logos/fiver-logo.png" alt="Logo 3" />
                 </div>
                 <div class="swiper-slide">
-                  <img src="assets/images/platform-4.webp" alt="Logo 4" />
+                  <img src="assets/images/logos/samsung-logo.png" alt="Logo 4" />
                 </div>
                 <div class="swiper-slide">
-                  <img src="assets/images/platform-1.webp" alt="Logo 5" />
+                  <img src="assets/images/logos/toyata-logo.png" alt="Logo 5" />
                 </div>
                 <div class="swiper-slide">
-                  <img src="assets/images/platform-2.webp" alt="Logo 6" />
+                  <img src="assets/images/logos/western-logo.png" alt="Logo 6" />
                 </div>
                 <div class="swiper-slide">
-                  <img src="assets/images/platform-3.webp" alt="Logo 7" />
+                    <img src="assets/images/logos/cocacola-logo.png" alt="Logo 7" />
                 </div>
                 <div class="swiper-slide">
-                  <img src="assets/images/platform-4.webp" alt="Logo 8" />
+                <img src="assets/images/logos/coinbase-logo.png" alt="Logo 8" />
                 </div>
               </div>
             </div>
@@ -230,69 +234,65 @@
         <section class="development-services py-5">
           <div class="container-fluid px-lg-5">
             <h2 class="text-center fw-bold">
-              Boost Your Brand's Presence with <br><span class="different">DigitexSol’s</span> Trusted SEO Strategies
+            Strategic<span class="different">Google Ads</span> Solutions for Optimal Results
             </h2>
-            <p class="mb-5 w-75 m-auto text-center">With DigitexSol’s best SEO services in UAE, your brand’s visibility takes center stage. We focus on not just improving your search engine rankings but creating a strong digital place that aligns with your target audience. Our commitment to staying updated with the latest SEO trends and algorithms empowers us to change your digital journey toward unparalleled success.            </p>
+            <p class="text-center fw-bold mb-5">At DigitexSol, we offer a range of Google ads services to promote your online presence and drive high-value clicks.</p>
             <div class="row card-slider">
               <div class="col-12 col-lg-4 mb-3">
                 <div class="card-ser text-center">
                   <i class="fas fa-wordpress icon fa-2x"></i>
-                  <h5 class="fw-700 py-3">On-Page SEO</h5>
+                  <h5 class="fw-700 py-3">Google Search Ads</h5>
                   <p>
-                    As the best content SEO agency, we optimize titles, Meta descriptions, headers, and content structure to align with targeted keywords and improve search engine rankings.
-                  </p>
+                    Boost your online visibility with targeted search ads. Reach potential customers precisely when they're searching for your products or services.                </p>
                 </div>
               </div>
 
               <div class="col-12 col-lg-4 mb-3">
                 <div class="card-ser text-center">
                   <i class="fas fa-cogs icon fa-2x"></i>
-                  <h5 class="fw-700 py-3">Off-Page SEO</h5>
+                  <h5 class="fw-700 py-3">Google Shopping Ads</h5>
                   <p>
-                    Our link-building tactics focus on establishing your website’s credibility and relevance, driving traffic, and improving search engine rankings
-                  </p>
+                    Boost your online visibility with targeted search ads. Reach potential customers precisely when they're searching for your products or services.                </p>
                 </div>
               </div>
 
               <div class="col-12 col-lg-4 mb-3">
                 <div class="card-ser text-center">
                   <i class="fab fa-php icon fa-2x"></i>
-                  <h5 class="fw-700 py-3">Keyword Research and Optimization</h5>
+                  <h5 class="fw-700 py-3">Google Video Ads</h5>
                   <p>
-                    Take the power of relevant keywords with our research and optimization services. We take time to identify high-impact keywords tailored to your niche, ensuring your content aligns with search intent.
-                  </p>
+                    Boost your online visibility with targeted search ads. Reach potential customers precisely when they're searching for your products or services.                </p>
                 </div>
               </div>
 
-              <div class="col-12 col-lg-4 mb-3">
+              <div class="col-12 col-lg-4">
                 <div class="card-ser text-center">
                   <i class="fas fa-code icon fa-2x"></i>
-                  <h5 class="fw-700 py-3">Technical SEO Services</h5>
+                  <h5 class="fw-700 py-3">Display Ads</h5>
                   <p>
-                    Optimize your website’s technical aspects with our technical SEO agency. We address issues such as site speed, mobile responsiveness, schema markup, and indexing, to help your site meet search engine standards.
-                  </p>
+                    Boost your online visibility with targeted search ads. Reach potential customers precisely when they're searching for your products or services.                </p>
                 </div>
               </div>
 
-              <div class="col-12 col-lg-4 mb-3">
+              <div class="col-12 col-lg-4">
                 <div class="card-ser text-center">
                   <i class="fab fa-drupal icon fa-2x"></i>
-                  <h5 class="fw-700 py-3">E-Commerce SEO Strategies</h5>
+                  <h5 class="fw-700 py-3">Google Mobile Ads</h5>
                   <p>
-                    We optimize product pages, and navigation, and implement strategies to improve visibility in competitive online marketplaces, driving more traffic and increasing conversions.
+                    Boost your online visibility with targeted search ads. Reach potential customers precisely when they're searching for your products or services.
                   </p>
                 </div>
               </div>
 
-              <div class="col-12 col-lg-4 mb-3">
+              <!-- <div class="col-12 col-lg-3">
                 <div class="card-ser text-center">
                   <i class="fab fa-python icon fa-2x"></i>
-                  <h5 class="fw-700 py-3">Local SEO Solutions</h5>
+                  <h5 class="fw-700 py-3">Product Design Services</h5>
                   <p>
-                    We optimize your online presence to cater to local searches, From Google My Business optimization to local citations, we ensure your business stands out in local searches.
+                    At Digitexsol, we believe in the power of user centric product design, ensuring that the final product not only meets their expectations but exceeds them.
                   </p>
                 </div>
-              </div>
+              </div> -->
             </div>
           </div>
         </section>
@@ -355,13 +355,13 @@
               <a class="nav-link" data-bs-toggle="tab" href="#tab5">SMM</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" data-bs-toggle="tab" href="#tab6">PPC</a>
+              <a class="nav-link active" data-bs-toggle="tab" href="#tab6">PPC</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" data-bs-toggle="tab" href="#tab7">Print</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link active" data-bs-toggle="tab" href="#tab8">SEO</a>
+              <a class="nav-link" data-bs-toggle="tab" href="#tab8">SEO</a>
             </li>
           </ul>
 
